--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "homepage": "https://gnobaaaar.github.io/monsters-app/",
   "dependencies": {
-    "gh-pages": "2.0.1",
+    "gh-pages": "^3.2.3",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   },
